arranco prueba de que conat es concurrent monoid

--- a/doc/latex/Instances/ConcurrentMonoid.tex
+++ b/doc/latex/Instances/ConcurrentMonoid.tex
@@ -785,6 +785,118 @@
 \end{code} 
 %</congmax>
 
+%<*predmax>
+\begin{code} %
+\>[0]\AgdaFunction{pred-max}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{m}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{[}}\AgdaSpace{}%
+\AgdaBound{i}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{]}}\AgdaSpace{}%
+\AgdaFunction{max}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{pred}\AgdaSpace{}%
+\AgdaBound{m}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{pred}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{∼}}\AgdaSpace{}%
+\AgdaFunction{pred}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{max}\AgdaSpace{}%
+\AgdaBound{m}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaFunction{pred-max}\AgdaSpace{}%
+\AgdaInductiveConstructor{zero}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{reflexive-∼}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{pred}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaFunction{pred-max}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaBound{m}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{reflexive-∼}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{max}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
+\AgdaBound{m}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{pred}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSymbol{))}\<%
+\end{code} 
+%</predmax> 
+
+%<*assocmax>
+\begin{code} %
+\>[0]\AgdaFunction{max-assoc}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSpace{}%
+\AgdaBound{m}\AgdaSpace{}%
+\AgdaBound{o}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{[}}\AgdaSpace{}%
+\AgdaBound{i}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{]}}\AgdaSpace{}%
+\AgdaFunction{max}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{max}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSpace{}%
+\AgdaBound{m}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{o}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{∼}}\AgdaSpace{}%
+\AgdaFunction{max}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{max}\AgdaSpace{}%
+\AgdaBound{m}\AgdaSpace{}%
+\AgdaBound{o}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaFunction{max-assoc}\AgdaSpace{}%
+\AgdaInductiveConstructor{zero}\AgdaSpace{}%
+\AgdaBound{m}\AgdaSpace{}%
+\AgdaBound{o}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{reflexive-∼}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{max}\AgdaSpace{}%
+\AgdaBound{m}\AgdaSpace{}%
+\AgdaBound{o}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaFunction{max-assoc}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{m}\AgdaSpace{}%
+\AgdaBound{o}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaSymbol{λ}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaSpace{}%
+\AgdaSymbol{.}\AgdaField{force}%
+\>[642I]\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{transitive-∼}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{max-assoc}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{pred}\AgdaSpace{}%
+\AgdaBound{m}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{pred}\AgdaSpace{}%
+\AgdaBound{o}\AgdaSymbol{))}\<%
+\\
+\>[642I][@{}l@{\AgdaIndent{0}}]%
+\>[40]\AgdaSymbol{(}\AgdaFunction{reflexive-∼}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
+\AgdaBound{n}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{max-cong}}\AgdaSpace{}%
+\AgdaFunction{pred-max}\AgdaSpace{}%
+\AgdaBound{m}\AgdaSpace{}%
+\AgdaBound{o}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{\}}\<%
+\end{code} 
+%</assocmax>
+
 %<*monomax>
 \begin{code} %
 \>[0]\AgdaFunction{ˡ≤max}\AgdaSpace{}%
@@ -885,7 +997,7 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}max-mono\AgdaUnderscore{}}}%
-\>[640I]\AgdaSymbol{:}\AgdaSpace{}%
+\>[729I]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{i}\AgdaSpace{}%
 \AgdaBound{m₁}\AgdaSpace{}%
@@ -894,7 +1006,7 @@
 \AgdaBound{n₂}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[640I]%
+\>[.][@{}l@{}]\<[729I]%
 \>[11]\AgdaOperator{\AgdaDatatype{[}}\AgdaSpace{}%
 \AgdaBound{i}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{]}}\AgdaSpace{}%
@@ -971,116 +1083,6 @@
 \AgdaSymbol{\}}\<%
 \end{code} 
 %</monomax>
-
-%<*assocmax>
-\begin{code} %
-\>[0]\AgdaFunction{pred-max}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{m}\AgdaSpace{}%
-\AgdaBound{n}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{[}}\AgdaSpace{}%
-\AgdaBound{i}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{]}}\AgdaSpace{}%
-\AgdaFunction{max}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{pred}\AgdaSpace{}%
-\AgdaBound{m}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{pred}\AgdaSpace{}%
-\AgdaBound{n}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{∼}}\AgdaSpace{}%
-\AgdaFunction{pred}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{max}\AgdaSpace{}%
-\AgdaBound{m}\AgdaSpace{}%
-\AgdaBound{n}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaFunction{pred-max}\AgdaSpace{}%
-\AgdaInductiveConstructor{zero}\AgdaSpace{}%
-\AgdaBound{n}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{reflexive-∼}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{pred}\AgdaSpace{}%
-\AgdaBound{n}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaFunction{pred-max}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
-\AgdaBound{m}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{n}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{reflexive-∼}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{max}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
-\AgdaBound{m}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{pred}\AgdaSpace{}%
-\AgdaBound{n}\AgdaSymbol{))}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{max-assoc}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{n}\AgdaSpace{}%
-\AgdaBound{m}\AgdaSpace{}%
-\AgdaBound{o}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{[}}\AgdaSpace{}%
-\AgdaBound{i}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{]}}\AgdaSpace{}%
-\AgdaFunction{max}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{max}\AgdaSpace{}%
-\AgdaBound{n}\AgdaSpace{}%
-\AgdaBound{m}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{o}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{∼}}\AgdaSpace{}%
-\AgdaFunction{max}\AgdaSpace{}%
-\AgdaBound{n}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{max}\AgdaSpace{}%
-\AgdaBound{m}\AgdaSpace{}%
-\AgdaBound{o}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaFunction{max-assoc}\AgdaSpace{}%
-\AgdaInductiveConstructor{zero}\AgdaSpace{}%
-\AgdaBound{m}\AgdaSpace{}%
-\AgdaBound{o}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{reflexive-∼}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{max}\AgdaSpace{}%
-\AgdaBound{m}\AgdaSpace{}%
-\AgdaBound{o}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaFunction{max-assoc}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
-\AgdaBound{n}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{m}\AgdaSpace{}%
-\AgdaBound{o}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{suc}\AgdaSpace{}%
-\AgdaSymbol{λ}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaSpace{}%
-\AgdaSymbol{.}\AgdaField{force}%
-\>[788I]\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{transitive-∼}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{max-assoc}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
-\AgdaBound{n}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{pred}\AgdaSpace{}%
-\AgdaBound{m}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{pred}\AgdaSpace{}%
-\AgdaBound{o}\AgdaSymbol{))}\<%
-\\
-\>[788I][@{}l@{\AgdaIndent{0}}]%
-\>[40]\AgdaSymbol{(}\AgdaFunction{reflexive-∼}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
-\AgdaBound{n}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{max-cong}}\AgdaSpace{}%
-\AgdaFunction{pred-max}\AgdaSpace{}%
-\AgdaBound{m}\AgdaSpace{}%
-\AgdaBound{o}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{\}}\<%
-\end{code} 
-%</assocmax>
 
 %<*commmax>
 \begin{code}%
